--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.2",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
